Cleans up automake file
The sources are now each on a different line, as opposed to all being
on the same line.

Signed-off-by: Lulu Li <lilulu6@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,44 @@
 AM_CXXFLAGS = -Wall -Werror -std=gnu++0x -fopenmp $(MAGICKXX_CFLAGS)
-AM_LDFLAGS = -lexpat -lsilo $(MAGICKXX_LIBS)
+AM_LDFLAGS = $(MAGICKXX_LIBS)
 
 bin_PROGRAMS=openmoc
-openmoc_SOURCES=Quadrature.cpp Solver.cpp Cell.cpp Point.cpp Timer.cpp log.cpp openmoc.cpp Lattice.cpp Options.cpp Track.cpp Material.cpp Parser.cpp Universe.cpp Plotter.cpp Surface.cpp Geometry.cpp TrackGenerator.cpp FlatSourceRegion.cpp LocalCoords.cpp Lattice.h log.h Options.h Surface.h Parser.h Timer.h TrackGenerator.h Material.h Geometry.h Plotter.h Quadrature.h LocalCoords.h Cell.h FlatSourceRegion.h configurations.h Universe.h plotterNew.h Solver.h Track.h Point.h
+openmoc_SOURCES=\
+	Quadrature.cpp \
+	Solver.cpp \
+	Cell.cpp \
+	Point.cpp \
+	Timer.cpp \
+	log.cpp \
+	openmoc.cpp \
+	Lattice.cpp \
+	Options.cpp \
+	Track.cpp \
+	Material.cpp \
+	Parser.cpp \
+	Universe.cpp \
+	Plotter.cpp \
+	Surface.cpp \
+	Geometry.cpp \
+	TrackGenerator.cpp \
+	FlatSourceRegion.cpp \
+	LocalCoords.cpp \
+	Lattice.h \
+	log.h \
+	Options.h \
+	Surface.h \
+	Parser.h \
+	Timer.h \
+	TrackGenerator.h \
+	Material.h \
+	Geometry.h \
+	Plotter.h \
+	Quadrature.h \
+	LocalCoords.h \
+	Cell.h \
+	FlatSourceRegion.h \
+	configurations.h \
+	Universe.h \
+	plotterNew.h \
+	Solver.h \
+	Track.h \
+	Point.h
